syntax = "proto3";

package ithos;

enum DigestAlg {
    SHA256 = 0;
}

enum EncryptionAlg {
    AES256GCM = 0;
}

enum SignatureAlg {
    Ed25519 = 0;
}

enum PasswordAlg {
    SCRYPT = 0;
}

enum CipherSuite {
    Ed25519_AES256GCM_SHA256 = 0;
}
