syntax = "proto3";

package ithos;

enum DigestAlgorithm {
    SHA256 = 0;
}

enum EncryptionAlgorithm {
    AES256GCM = 0;
}

enum SignatureAlgorithm {
    Ed25519 = 0;
}

enum CipherSuite {
    Ed25519_AES256GCM_SHA256 = 0;
}
