package ithos.object;

import "algorithm.proto";

// Encrypted access credentials
message Credential {
    enum Type {
        SIGNATURE_KEY_PAIR = 1; // Public/private keypair
    }

    required bytes keyid = 1;
    required Type credential_type = 2;
    optional string credential_alg = 3;
    optional EncryptionAlgorithm sealing_alg = 4;
    optional bytes encrypted_value = 5;
    optional bytes salt = 6;
    optional bytes public_key = 7;
    optional uint64 not_before = 8;
    optional uint64 not_after = 9;
    optional string description = 10;
}
